# stasis-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  resources.txt  spawn_n.sh
src/: blockpos_string.rs  commands.rs  devnet.rs  entity_util.rs  main.rs  nbs_format.rs  util.rs
src/module/: auto_tpa.rs  autoeat.rs  beertender.rs  chat.rs  devnet_handler.rs  disc_jockey.rs  emergency_quit.rs  killaura.rs  legacy_stasis.rs  look_at_players.rs  mod.rs  periodic_swing.rs  server_tps.rs  shulker_counter.rs  soundness.rs  stasis.rs  visual_range.rs  webhook.rs
src/plugins/: mod.rs  nofall.rs  openauthmod.rs
src/task/: affect_block.rs  attack.rs  center.rs  close_inventory_and_sync.rs  delay_duration.rs  delay_ticks.rs  disc_jockey.rs  eat.rs  func.rs  group.rs  mod.rs  oncefunc.rs  open_container_block.rs  pathfind.rs  sip_beer.rs  swing_beer.rs  tracked.rs  validate.rs  wait_for_block_unpower.rs
