[package]
name = "stasis-bot"
version = "0.3.0-beta.5"
edition = "2021"
authors = ["EnderKill98"]

[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
#debug = true
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# CLI Opt parsing
clap = { version = "4", features = ["derive"] }

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

# Easy error handling
anyhow = "1"

bevy_log = "0.15.2" # Whatever azalea is using
#azalea = { version = "0.13.0+mc1.21.5", default-features = false, features = [ "log" ]}
#azalea = { git = "https://github.com/EnderKill98/azalea.git", rev = "f7ad2c57", default-features = false, features = [ "log" ]}
azalea = { git = "https://github.com/azalea-rs/azalea.git", rev = "8af265e4", default-features = false, features = [ "log" ]} # Branch: 1.21.4

parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"
rand = "0.9.1"

# For OpenAuthMod Plugin
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "native-tls-vendored",
] }

#paho-mqtt = { version = "0.12", features = ["vendored-ssl"] }

# Easy command input
#rustyline = "14"

mimalloc = "0.1"
#tikv-jemallocator = "0.6"