[package]
name = "stasis-bot"
version = "0.4.1"
edition = "2021"
authors = ["EnderKill98"]


[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
#debug = true
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# CLI Opt parsing
clap = { version = "4", features = ["derive"] }

# Async Runtime
tokio = "1"

# Easy error handling
anyhow = "1"

# The amazing bot library!
bevy_log = "0.15.2" # Whatever azalea is using
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "8af265e4", default-features = false, features = [ "log" ] }
#azalea-viaversion = { git = "https://github.com/EnderKill98/azalea-viaversion.git", branch = "1.21.4" }

parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"
