[package]
name = "stasis-bot"
version = "0.7.1"
edition = "2024"
authors = ["EnderKill98"]


[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
#debug = true
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# CLI Opt parsing
clap = { version = "4", features = ["derive"] }

# Async Runtime
tokio = "1"

# Easy error handling
anyhow = "1"

# The amazing bot library!
bevy_log = "0.15.2" # Whatever azalea is using
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "8af265e4", default-features = false, features = [ "log", "serde" ] }
#azalea-viaversion = { git = "https://github.com/EnderKill98/azalea-viaversion.git", branch = "1.21.4" }

parking_lot = { version = "0.12", features = [ "deadlock_detection" ] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"

uuid = { version = "1", features = [ "serde" ] }
#tungstenite = "0.27"
tokio-tungstenite = { version = "0.27", features = [ "native-tls" ] }
futures-util = "0.3"

async-trait = "0.1"
chrono = { version = "0.4", features = [ "serde" ] }
rand = "0.9"

# Some depency already specifes what OpenSSL to use.
# Force OpenSSL to be always vendored to avoid system library headaches. Especially when cross-compiling.
openssl = { version = "*", features = [ "vendored" ] }